package com.padroes.observer;

public interface Observador {
    void atualizar(String acao, double preco);
}
